--- a/challenge_4/minesweeper/src/App.css
+++ b/challenge_4/minesweeper/src/App.css
@@ -12,3 +12,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.cell {
+  text-align: center;
+  vertical-align: middle;
+  height: 40px;
+  width: 40px;
+}
