--- a/challenge_4/minesweeper/src/App.css
+++ b/challenge_4/minesweeper/src/App.css
@@ -14,8 +14,17 @@
 }
 
 .cell {
+  border: 1px solid grey;
   text-align: center;
   vertical-align: middle;
   height: 40px;
   width: 40px;
+}
+
+.revealed-false {
+  background-color: beige;
+}
+
+.revealed-true {
+  background-color: white;
 }
